# rimjhim

./: .gitignore  README.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
src/: App.css  App.tsx  index.css  routeTree.gen.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/local_lancedb/notes_table.lance/_transactions/: 0-f63d62d5-5edc-4d69-bede-0c7a86dda440.txn
src-tauri/src/: lib.rs  main.rs  serverfn.rs
src/components/: ResizeHandles.tsx  Titlebar.tsx  app-sidebar.tsx  data.tsx  nav-favorites.tsx  nav-main.tsx  nav-workspaces.tsx  team-switcher.tsx
src/components/app-icons/: Logo.tsx  settings.tsx
src/components/tiptap-templates/simple/: simple-editor.tsx  theme-toggle.tsx
src/components/ui/: sidebar.tsx
src/routes/: __root.tsx  askai.tsx  index.tsx
src/styles/: styles.css
